[metadata]
name = {{ cookiecutter.repo_name }}
summary = {{ cookiecutter.project_short_description }}
description-file =
    README.rst
author = Saad Zaher
author-email = eng.szaher@gmail.com
home-page = http://www.github.com/szaher
classifier =
    Environment :: Linux
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[entry_points]
console_scripts =
    {{ cookiecutter.program_name }} = {{ cookiecutter.module_name }}.cmd:main

[files]
packages =
    {{ cookiecutter.module_name }}

[compile_catalog]
directory = {{cookiecutter.module_name}}/locale
domain = {{cookiecutter.module_name}}

[update_catalog]
domain = {{cookiecutter.module_name}}
output_dir = {{cookiecutter.module_name}}/locale
input_file = {{cookiecutter.module_name}}/locale/{{cookiecutter.module_name}}.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = {{cookiecutter.module_name}}/locale/{{cookiecutter.module_name}}.pot
